# asio5-client

./: CMakeLists.txt  README.md  asio5_client.cpp  asio5_client.sln  asio5_client.vcxproj  asio5_client.vcxproj.filters  main.cpp  round_robin.hpp  session.cpp  session.h  stdafx.cpp  stdafx.h  targetver.h  yield.hpp
detail/: yield.hpp
